--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ distributed @ file:///tmp/build/80754af9/distributed_1635956221111/work
 docutils @ file:///tmp/build/80754af9/docutils_1620827980776/work
 entrypoints==0.3
 et-xmlfile==1.1.0
+Faker==13.3.1
 fastcache @ file:///tmp/build/80754af9/fastcache_1607571273717/work
 filelock @ file:///tmp/build/80754af9/filelock_1635402558181/work
 flake8 @ file:///tmp/build/80754af9/flake8_1620776156532/work
@@ -89,12 +90,14 @@ imagesize @ file:///Users/ktietz/demo/mc3/conda-bld/imagesize_1628863108022/work
 importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1631916692253/work
 inflection==0.5.1
 iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
+install==1.3.5
 intervaltree @ file:///Users/ktietz/demo/mc3/conda-bld/intervaltree_1630511889664/work
 ipykernel==6.6.0
 ipython @ file:///tmp/build/80754af9/ipython_1635944169458/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
 ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
 isort @ file:///tmp/build/80754af9/isort_1628603791788/work
+it==1.0.0
 itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
 jdcal @ file:///Users/ktietz/demo/mc3/conda-bld/jdcal_1630584345063/work
 jedi @ file:///tmp/build/80754af9/jedi_1611333729159/work
@@ -136,6 +139,7 @@ multipledispatch @ file:///tmp/build/80754af9/multipledispatch_1607574243360/wor
 munkres==1.1.4
 mypy-extensions==0.4.3
 mysql-connector-python==8.0.28
+namegenerator==1.0.6
 navigator-updater==0.2.1
 nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
 nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
